@@ -1848,3 +1848,4 @@ seen. gmtime warning still there
 - Started work on set::allow-userhost-change
 - Fixed some typos in aliases/operstats.conf (#0000684) and added an aliases/cygnus.conf
   (#0000686), both reported by katsklaw
+- Added better error messages support instead of just "Dead socket".
